--- a/Tasker/UI/Storyboards/Base.lproj/Main.storyboard
+++ b/Tasker/UI/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Pxj-hS-Dlx">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Task List View Controller-->
+        <!--All Tasks-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="TaskListViewController" customModule="Tasker" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Hxd-w6-l3h">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TaskCellID" id="Svz-OC-SbN">
@@ -32,9 +32,31 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <button autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ubO-kg-UXG">
+                                <rect key="frame" x="155.5" y="583" width="64" height="64"/>
+                                <color key="backgroundColor" red="0.26307370689999998" green="0.59400491720000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="MoM-WW-58d"/>
+                                    <constraint firstAttribute="width" secondItem="ubO-kg-UXG" secondAttribute="height" multiplier="1:1" id="vIb-mc-sga"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Symbol" family="Symbol" pointSize="48"/>
+                                <inset key="contentEdgeInsets" minX="1" minY="3" maxX="0.0" maxY="0.0"/>
+                                <state key="normal" title="+"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="32"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <segue destination="LNv-hN-oox" kind="show" identifier="AddNewTask" id="Pwa-UD-YoL"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ubO-kg-UXG" secondAttribute="bottom" constant="20" id="OTw-72-Mqt"/>
+                            <constraint firstItem="ubO-kg-UXG" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="QrZ-hT-ICj"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Hxd-w6-l3h" secondAttribute="trailing" id="TYu-TH-Dwc"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Hxd-w6-l3h" secondAttribute="bottom" id="i1d-Mb-a5G"/>
                             <constraint firstItem="Hxd-w6-l3h" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="tYG-zt-ruA"/>
@@ -42,13 +64,86 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="All Tasks" id="Rqq-wH-CVk"/>
                     <connections>
                         <outlet property="taskTableView" destination="Hxd-w6-l3h" id="egO-wW-DZT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="607" y="143"/>
+            <point key="canvasLocation" x="1544.8" y="142.57871064467767"/>
+        </scene>
+        <!--New Task-->
+        <scene sceneID="oM6-Vs-C9T">
+            <objects>
+                <viewController title="New Task" id="LNv-hN-oox" customClass="AddTaskViewController" customModule="Tasker" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="CbJ-8H-9oU">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qwA-dy-O0C">
+                                <rect key="frame" x="8" y="102.5" width="359" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yPp-36-BA2">
+                                <rect key="frame" x="28" y="80" width="28.5" height="14.5"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="qwA-dy-O0C" firstAttribute="top" secondItem="yPp-36-BA2" secondAttribute="bottom" constant="8" id="4os-nq-Tsw"/>
+                            <constraint firstItem="qwA-dy-O0C" firstAttribute="centerX" secondItem="fER-Mb-g8A" secondAttribute="centerX" id="ITj-6H-hNI"/>
+                            <constraint firstItem="yPp-36-BA2" firstAttribute="leading" secondItem="qwA-dy-O0C" secondAttribute="leading" constant="20" id="Sv0-aD-MdT"/>
+                            <constraint firstItem="fER-Mb-g8A" firstAttribute="trailing" secondItem="qwA-dy-O0C" secondAttribute="trailing" constant="8" id="hxM-es-QvQ"/>
+                            <constraint firstItem="yPp-36-BA2" firstAttribute="top" secondItem="fER-Mb-g8A" secondAttribute="top" constant="16" id="nHz-3F-MIZ"/>
+                            <constraint firstItem="qwA-dy-O0C" firstAttribute="leading" secondItem="fER-Mb-g8A" secondAttribute="leading" constant="8" id="syy-2G-v3v"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="fER-Mb-g8A"/>
+                    </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="New Task" id="gkl-sf-Edg">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="eC8-Dj-5di">
+                            <connections>
+                                <action selector="dismiss:" destination="LNv-hN-oox" id="ixH-8Z-14d"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="emA-Bt-WfY">
+                            <connections>
+                                <action selector="saveTask:" destination="LNv-hN-oox" id="Xa8-jx-ie4"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="titleTextField" destination="qwA-dy-O0C" id="Mw5-yo-tP7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eLl-XT-Vhi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2398" y="143"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="EPQ-Jz-yXz">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Pxj-hS-Dlx" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4lO-oY-ET4">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="8bP-l2-26b"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Oc7-Rz-aHH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="605.60000000000002" y="142.57871064467767"/>
         </scene>
     </scenes>
 </document>
